# mlsummary

./: .gitignore  LICENSE  README.html  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-deply-pypitest.yml  python-package.yml
examples/: classification.ipynb  classification_search_cv.ipynb  clustering.ipynb  outliers.ipynb
mlsummary/: __init__.py
mlsummary/classification/: AdaBoostClass.py  GradientBoostingClass.py  NearestCentroidClass.py  RadiusNeighborsClass.py  RandomForestClass.py  _AdaBoostClass.py  _GradientBoostingClass.py  _NearestCentroidClass.py  _RadiusNeighborsClass.py  _RandomForestClass.py  _SoftmaxRegression.py  _TreeClass.py  __init__.py  _baggingClass.py  _classification_functions.py  _gaussianNaiveBayes.py  _knn.py  _lda.py  _lgbmClass.py  _qda.py  _svc.py  _xgboostClass.py  lda.py  qda.py  svc.py  xgboostClass.py
mlsummary/clustering/: AffinityPropagation.py  _AffinityPropagation.py  _MeanShift.py  _MiniBatchKMeans.py  __init__.py  _clustering_functions.py  _dbscan.py  _fuzzyKmeansSummary.py  _gmm.py  _kmeans.py  _optics.py  dbscan.py  gmm.py  kmeans.py
mlsummary/outliers/: LocalOutlierFactor.py  LocalOutlierFactorNovelty.py  OneClassSVM.py  _IsolationForest.py  _LocalOutlierFactor.py  _LocalOutlierFactorNovelty.py  _OneClassSVM.py  __init__.py  _outliers_functions.py
