[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlsummary"
description = "Summary package for machinne learning algorithms."
readme = "README.md"
authors = [{ name = "Alessio Serafini", email = "srf.alessio@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["summary", "machine learning", 'artificial intelligence']

requires-python = ">=3.9"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.package-data]
"*" = ["README.md"]

[tool.setuptools]
platforms = ["any"]

[project.urls]
Homepage = "https://github.com/serafinialessio/mlsummary"
documentation = 'https://github.com/serafinialessio/mlsummary'
repository = 'https://github.com/serafinialessio/mlsummary'
Issues = "https://github.com/serafinialessio/mlsummary/issues"